se agregaron imagnes a la grilla de card, se ajustaron tamaño de imagenes para el contenedor de cada card, se crearon botones de redes sociales sobre la misma, se puso precio y descripcion del articulo en cada card correspondiente y se puso link para direccionar a al pagina de detallesproducto1

--- a/pages/categoria1.html
+++ b/pages/categoria1.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="../css/calzado.css" />
+    <link rel="stylesheet" href="../css/remeras.css" />
     <link
       rel="shortcut icon"
       href="../img/logo-empresa.png"
@@ -202,7 +202,231 @@
       </nav>
     </header>
     <main>
-      
+      <!---->
+      <div class="container">
+        <div class="d-flex justify-content-between my-3">
+          <div>
+            <button class="border rounded-2 text-secondary">
+              Productos / Calzado
+            </button>
+          </div>
+          <div>
+            <select
+              name="ordenador"
+              id="ordenador"
+              class="text-secondary rounded-2 text-center"
+            >
+              <option value="">Ordenar Por</option>
+              <option value="">Adidas</option>
+              <option value="">Nike</option>
+              <option value="">Vans</option>
+              <option value="">Puma</option>
+            </select>
+          </div>
+        </div>
+        <h6>
+          Encontrá remeras para todos los estilos, deporte, entrenamiento o para
+          lucir a la moda con toda la comodidad que necesitás.
+        </h6>
+        <div class="line-vertical"></div>
+      </div>
+      <!--Grilla de cards (REMERAS)-->
+      <section class="container">
+        <div class="row my-4 gap-4">
+          <div class="card text-center" style="width: 18rem">
+            <a href="../pages/detalleproducto1.html" target="_blank">
+              <div class="contenedor-img w-100"></div
+            ></a>
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <p class="bg-dark rounded-2 text-white p-1">Nuevo</p>
+                <div>
+                  <a
+                    href="https://www.facebook.com/sharer.php?u=https://www.cristobalcolon.com/producto_detalle/remera_independent_clipper/38487.html&t="
+                    target="_blank"
+                    ><i class="bi bi-facebook fs-5 me-2 text-secondary"></i
+                  ></a>
+                  <a href="https://www.instagram.com/" target="_blank"
+                    ><i class="bi bi-instagram fs-5 me-2 text-secondary"></i
+                  ></a>
+                </div>
+              </div>
+              <h5 class="card-title text-secondary">
+                Remera Independent Clipper
+              </h5>
+              <h6 class="card-text text-secondary">-Hombre-</h6>
+              <h4>$49.999</h4>
+            </div>
+          </div>
+          <div class="card text-center" style="width: 18rem">
+            <a href="../pages/detalleproducto1.html" target="_blank">
+              <div class="contenedor-img1 w-100"></div
+            ></a>
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <p class="bg-dark rounded-2 text-white p-1">Nuevo</p>
+                <div>
+                  <a
+                    href="https://www.facebook.com/sharer.php?u=https://www.cristobalcolon.com/producto_detalle/remera_independent_clipper/38487.html&t="
+                    target="_blank"
+                    ><i class="bi bi-facebook fs-5 me-2 text-secondary"></i
+                  ></a>
+                  <a href="https://www.instagram.com/" target="_blank"
+                    ><i class="bi bi-instagram fs-5 me-2 text-secondary"></i
+                  ></a>
+                </div>
+              </div>
+              <h5 class="card-title text-secondary">Remera Rip Curl RC</h5>
+              <h6 class="card-text text-secondary">-Hombre-</h6>
+              <h4>$49.999</h4>
+            </div>
+          </div>
+          <div class="card text-center" style="width: 18rem">
+            <a href="../pages/detalleproducto1.html" target="_blank">
+              <div class="contenedor-img2 w-100"></div
+            ></a>
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <p class="bg-dark rounded-2 text-white p-1">Nuevo</p>
+                <div>
+                  <a
+                    href="https://www.facebook.com/sharer.php?u=https://www.cristobalcolon.com/producto_detalle/remera_independent_clipper/38487.html&t="
+                    target="_blank"
+                    ><i class="bi bi-facebook fs-5 me-2 text-secondary"></i
+                  ></a>
+                  <a href="https://www.instagram.com/" target="_blank"
+                    ><i class="bi bi-instagram fs-5 me-2 text-secondary"></i
+                  ></a>
+                </div>
+              </div>
+              <h5 class="card-title text-secondary">Rip Curl Everyday</h5>
+              <h6 class="card-text text-secondary">-Hombre-</h6>
+              <h4>$49.999</h4>
+            </div>
+          </div>
+          <div class="card text-center" style="width: 18rem">
+            <a href="../pages/detalleproducto1.html" target="_blank">
+              <div class="contenedor-img3 w-100"></div
+            ></a>
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <p class="bg-dark rounded-2 text-white p-1">Nuevo</p>
+                <div>
+                  <a
+                    href="https://www.facebook.com/sharer.php?u=https://www.cristobalcolon.com/producto_detalle/remera_independent_clipper/38487.html&t="
+                    target="_blank"
+                    ><i class="bi bi-facebook fs-5 me-2 text-secondary"></i
+                  ></a>
+                  <a href="https://www.instagram.com/" target="_blank"
+                    ><i class="bi bi-instagram fs-5 me-2 text-secondary"></i
+                  ></a>
+                </div>
+              </div>
+              <h5 class="card-title text-secondary">
+                Remera Santa Cruz Other Dot
+              </h5>
+              <h6 class="card-text text-secondary">-Hombre-</h6>
+              <h4>$49.999</h4>
+            </div>
+          </div>
+          <div class="card text-center" style="width: 18rem">
+            <a href="../pages/detalleproducto1.html" target="_blank">
+              <div class="contenedor-img4 w-100"></div
+            ></a>
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <p class="bg-dark rounded-2 text-white p-1">Nuevo</p>
+                <div>
+                  <a
+                    href="https://www.facebook.com/sharer.php?u=https://www.cristobalcolon.com/producto_detalle/remera_independent_clipper/38487.html&t="
+                    target="_blank"
+                    ><i class="bi bi-facebook fs-5 me-2 text-secondary"></i
+                  ></a>
+                  <a href="https://www.instagram.com/" target="_blank"
+                    ><i class="bi bi-instagram fs-5 me-2 text-secondary"></i
+                  ></a>
+                </div>
+              </div>
+              <h5 class="card-title text-secondary">
+                Remera Santa Cruz Rosk Kopp
+              </h5>
+              <h6 class="card-text text-secondary">-Hombre-</h6>
+              <h4>$69.999</h4>
+            </div>
+          </div>
+          <div class="card text-center" style="width: 18rem">
+            <a href="../pages/detalleproducto1.html" target="_blank">
+              <div class="contenedor-img5 w-100"></div
+            ></a>
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <p class="bg-dark rounded-2 text-white p-1">Nuevo</p>
+                <div>
+                  <a
+                    href="https://www.facebook.com/sharer.php?u=https://www.cristobalcolon.com/producto_detalle/remera_independent_clipper/38487.html&t="
+                    target="_blank"
+                    ><i class="bi bi-facebook fs-5 me-2 text-secondary"></i
+                  ></a>
+                  <a href="https://www.instagram.com/" target="_blank"
+                    ><i class="bi bi-instagram fs-5 me-2 text-secondary"></i
+                  ></a>
+                </div>
+              </div>
+                <h5 class="card-title text-secondary">Remera Vans Classic</h5>
+                <h6 class="card-text text-secondary">-Hombre-</h6>
+                <h4>$69.999</h4>
+            </div>
+          </div>
+          <div class="card text-center" style="width: 18rem">
+            <a href="../pages/detalleproducto1.html" target="_blank">
+              <div class="contenedor-img6 w-100"></div
+            ></a>
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <p class="bg-dark rounded-2 text-white p-1">Nuevo</p>
+                <div>
+                  <a
+                    href="https://www.facebook.com/sharer.php?u=https://www.cristobalcolon.com/producto_detalle/remera_independent_clipper/38487.html&t="
+                    target="_blank"
+                    ><i class="bi bi-facebook fs-5 me-2 text-secondary"></i
+                  ></a>
+                  <a href="https://www.instagram.com/" target="_blank"
+                    ><i class="bi bi-instagram fs-5 me-2 text-secondary"></i
+                  ></a>
+                </div>
+              </div>
+              <h5 class="card-title text-secondary">
+                Remera Vision Over Classic
+              </h5>
+              <h6 class="card-text text-secondary">-Hombre-</h6>
+              <h4>$69.999</h4>
+            </div>
+          </div>
+          <div class="card text-center" style="width: 18rem">
+            <a href="../pages/detalleproducto1.html" target="_blank">
+              <div class="contenedor-img7 w-100"></div
+            ></a>
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <p class="bg-dark rounded-2 text-white p-1">Nuevo</p>
+                <div>
+                  <a
+                    href="https://www.facebook.com/sharer.php?u=https://www.cristobalcolon.com/producto_detalle/remera_independent_clipper/38487.html&t="
+                    target="_blank"
+                    ><i class="bi bi-facebook fs-5 me-2 text-secondary"></i
+                  ></a>
+                  <a href="https://www.instagram.com/" target="_blank"
+                    ><i class="bi bi-instagram fs-5 me-2 text-secondary"></i
+                  ></a>
+                </div>
+              </div>
+              <h5 class="card-title text-secondary">Remera Volcom Eco Yarns</h5>
+              <h6 class="card-text text-secondary">-Hombre-</h6>
+              <h4>$69.999</h4>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="bg-dark">
       <section class="container">
