--- a/pages/categoria1.html
+++ b/pages/categoria1.html
@@ -231,9 +231,9 @@
         <div class="line-vertical"></div>
       </div>
       <!--Grilla de cards (REMERAS)-->
-      <section class="container">
-        <div class="row my-4 gap-4">
-          <div class="card text-center" style="width: 18rem">
+      <section class="container my-4">
+        <div class="row gap-4 justify-content-center">
+          <div class="card text-center " style="width: 18rem">
             <a href="../pages/detalleproducto1.html" target="_blank">
               <div class="contenedor-img w-100"></div
             ></a>
