--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -7,6 +7,7 @@
   <meta name="author" content="Marcos - Matias - Lucas - Pablo - Facundo">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <title>Sobre Nosotros</title>
@@ -135,52 +136,95 @@
     <section class="container-fluid">
       <article>
         <h1 class="text-center my-4 fw-bold">Sobre Nosotros</h1>
-        <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-4 mx-md-auto gap-3">
+        <div class="d-flex flex-column justify-content-center align-items-center mb-4 mx-md-auto gap-3 flex-md-wrap flex-lg-row">
           <!-- card 1 -->
-          <div class="imagen-container">
+          <div class="imagen-container text-center">
             <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
             <div class="overplay">
-              <h5>Card title</h5>
+              <h5>Marcos Lautaro Molina</h5>
               <p>This is a wider card with supporting text below as a natural
                 lead-in to additional content. This content is a little bit longer.</p>
+              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+                Siguenos en nuestras redes
+              </p>
+              <div>
+                <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
+                <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
+                <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
+                    class="fs-3 text-white bi bi-facebook"></i></a>
+              </div>
             </div>
           </div>
           <!-- card 2 -->
-          <div class="imagen-container">
-            <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
+          <div class="imagen-container text-center">
+            <img src="../img/Pablo.jpg" alt="Pablo Cruzado">
             <div class="overplay">
-              <h5>Card title</h5>
-              <p>This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit longer.</p>
+              <h5>Pablo Cruzado</h5>
+              <p>Hola! Soy Pablo Cruzado, tengo 20 años y estoy en último año de la tecnicatura en desarrollo y calidad
+                de software en la UNSTA</p>
+              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+                Siguenos en nuestras redes
+              </p>
+              <div>
+                <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
+                <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
+                <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
+                    class="fs-3 text-white bi bi-facebook"></i></a>
+              </div>
             </div>
           </div>
           <!-- card 3 -->
-          <div class="imagen-container">
-            <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
+          <div class="imagen-container text-center">
+            <img src="../img/Matias-Vivanco.jpg" alt="Matias Vivanco">
             <div class="overplay">
-              <h5>Card title</h5>
-              <p>This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit longer.</p>
+              <h5>Matias Vivanco</h5>
+              <p>Soy Matías José Vivanco se refieren a mi como Viv o por mi apellido, tengo 20 años vivo en Leon Rouges,
+                estudio ingeniería en electrónica y tengo un gatito negro llamado litten
+              </p>
+              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+                Siguenos en nuestras redes
+              </p>
+              <div>
+                <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
+                <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
+                <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
+                    class="fs-3 text-white bi bi-facebook"></i></a>
+              </div>
             </div>
           </div>
           <!-- card 4 -->
-          <div class="imagen-container">
-            <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
+          <div class="imagen-container text-center">
+            <img src="../img/Facundo-Leiva.jpg" alt="Facundo Leiva">
             <div class="overplay">
-              <h5>Card title</h5>
-              <p>This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit longer.</p>
-             
+              <h5>Facuando Leivaa</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias provident delectus quasi. Repellendus, laboriosam, reiciendis illum accusantium ex, rem laudantium corporis magni totam impedit libero dolor voluptatem commodi et porro quaerat at mollitia praesentium consequatur iusto! Dignissimos quaerat quos doloribus maxime ducimus sunt qui vitae sint consequatur. Ad, quisquam corrupti?</p>
+              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+                Siguenos en nuestras redes
+              </p>
+              <div>
+                <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
+                <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
+                <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
+                    class="fs-3 text-white bi bi-facebook"></i></a>
+              </div>
             </div>
           </div>
           <!-- card 5 -->
-          <div class="imagen-container">
+          <div class="imagen-container text-center">
             <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
             <div class="overplay">
               <h5>Card title</h5>
               <p>This is a wider card with supporting text below as a natural
                 lead-in to additional content. This content is a little bit longer.</p>
-              
+              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+                Siguenos en nuestras redes
+              </p>
+              <div>
+                <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
+                <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
+                <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
+                    class="fs-3 text-white bi bi-facebook"></i></a>
+              </div>
             </div>
           </div>
         </div>
