agregue margenes a los titulos, a los textos, a los iconos y a los iconos le agregue un espaciado osea un gap-3

--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -20,7 +20,7 @@
         <!-- Nav desktop -->
         <ul class="nav-cont">
           <li class="items">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="../index.html">
               <img src="../img/logo-minimalista-de-indumentaria.png" alt="Logo Rolling Indumentaria" class="navImg" />
             </a>
           </li>
@@ -133,21 +133,21 @@
     </nav>
   </header>
   <main>
-    <section class="container-fluid">
+    <section class="container">
       <article>
         <h1 class="text-center my-4 fw-bold">Sobre Nosotros</h1>
         <div class="d-flex flex-column justify-content-center align-items-center mb-4 mx-md-auto gap-3 flex-md-wrap flex-lg-row">
           <!-- card 1 -->
-          <div class="imagen-container text-center">
+          <div class="imagen-container">
             <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
-            <div class="overplay">
+            <div class="overplay text-center">
               <h5>Marcos Lautaro Molina</h5>
-              <p>This is a wider card with supporting text below as a natural
+              <p class="mb-4">This is a wider card with supporting text below as a natural
                 lead-in to additional content. This content is a little bit longer.</p>
-              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+              <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
-              <div>
+              <div class="mt-3 d-flex gap-3">
                 <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
                 <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
                 <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
@@ -156,16 +156,16 @@
             </div>
           </div>
           <!-- card 2 -->
-          <div class="imagen-container text-center">
+          <div class="imagen-container">
             <img src="../img/Pablo.jpg" alt="Pablo Cruzado">
-            <div class="overplay">
+            <div class="overplay text-center">
               <h5>Pablo Cruzado</h5>
-              <p>Hola! Soy Pablo Cruzado, tengo 20 años y estoy en último año de la tecnicatura en desarrollo y calidad
+              <p class="mb-4">Hola! Soy Pablo Cruzado, tengo 20 años y estoy en último año de la tecnicatura en desarrollo y calidad
                 de software en la UNSTA</p>
-              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+              <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
-              <div>
+              <div class="mt-3 d-flex gap-3">
                 <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
                 <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
                 <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
@@ -174,17 +174,17 @@
             </div>
           </div>
           <!-- card 3 -->
-          <div class="imagen-container text-center">
+          <div class="imagen-container">
             <img src="../img/Matias-Vivanco.jpg" alt="Matias Vivanco">
-            <div class="overplay">
+            <div class="overplay text-center">
               <h5>Matias Vivanco</h5>
-              <p>Soy Matías José Vivanco se refieren a mi como Viv o por mi apellido, tengo 20 años vivo en Leon Rouges,
+              <p class="mb-4">Soy Matías José Vivanco se refieren a mi como Viv o por mi apellido, tengo 20 años vivo en Leon Rouges,
                 estudio ingeniería en electrónica y tengo un gatito negro llamado litten
               </p>
-              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+              <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
-              <div>
+              <div class="mt-3 d-flex gap-3">
                 <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
                 <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
                 <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
@@ -193,15 +193,15 @@
             </div>
           </div>
           <!-- card 4 -->
-          <div class="imagen-container text-center">
+          <div class="imagen-container">
             <img src="../img/Facundo-Leiva.jpg" alt="Facundo Leiva">
-            <div class="overplay">
-              <h5>Facuando Leivaa</h5>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias provident delectus quasi. Repellendus, laboriosam, reiciendis illum accusantium ex, rem laudantium corporis magni totam impedit libero dolor voluptatem commodi et porro quaerat at mollitia praesentium consequatur iusto! Dignissimos quaerat quos doloribus maxime ducimus sunt qui vitae sint consequatur. Ad, quisquam corrupti?</p>
-              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+            <div class="overplay text-center">
+              <h5>Facundo Leiva</h5>
+              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias provident delectus quasi. Repellendus, laboriosam, reiciendis illum accusantium ex, rem laudantium corporis magni totam impedit libero dolor voluptatem commodi et porro quaerat at mollitia praesentium consequatur iusto! Dignissimos quaerat quos doloribus maxime ducimus sunt qui vitae sint consequatur. Ad, quisquam corrupti?</p>
+              <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
-              <div>
+              <div class="mt-3 d-flex gap-3">
                 <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
                 <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
                 <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
@@ -210,16 +210,16 @@
             </div>
           </div>
           <!-- card 5 -->
-          <div class="imagen-container text-center">
-            <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
-            <div class="overplay">
-              <h5>Card title</h5>
-              <p>This is a wider card with supporting text below as a natural
+          <div class="imagen-container">
+            <img src="../img/Lucas-Basualdo.jpg" alt="Laucas Basualdo">
+            <div class="overplay text-center">
+              <h5>Lucas Basualdo</h5>
+              <p class="mb-4">This is a wider card with supporting text below as a natural
                 lead-in to additional content. This content is a little bit longer.</p>
-              <p class="text-bg-light rounded-3 w-100 fw-bolder">
+              <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
-              <div>
+              <div class="mt-3 d-flex gap-3">
                 <a href="https://web.whatsapp.com/" class="m-2"><i class="fs-3 text-white bi bi-whatsapp"></i></a>
                 <a href="https://www.instagram.com/" class="m-2"><i class="fs-3 text-white bi bi-instagram"></i></a>
                 <a href="https://es-la.facebook.com/login/web/" class="m-2"><i
