--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -368,6 +368,6 @@
         </div>
       </section>
     </footer>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
