--- a/pages/error404.html
+++ b/pages/error404.html
@@ -40,6 +40,6 @@
         </a>
       </section>
     </main>
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
