hice cambios en los textos dandoles margenes y cambie el tetxo de la card de Marcos Lautaro Molina

--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <link rel="shortcut icon" href="../img/logo-empresa.png" type="image/x-icon" />
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <title>Sobre Nosotros</title>
@@ -136,14 +137,13 @@
     <section class="container">
       <article>
         <h1 class="text-center my-4 fw-bold">Sobre Nosotros</h1>
-        <div class="d-flex flex-column justify-content-center align-items-center mb-4 mx-md-auto gap-3 flex-md-wrap flex-lg-row">
+        <div class="d-flex flex-column justify-content-center align-items-center mb-4 gap-4 flex-md-row flex-wrap">
           <!-- card 1 -->
           <div class="imagen-container">
             <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
             <div class="overplay text-center">
               <h5>Marcos Lautaro Molina</h5>
-              <p class="mb-4">This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit longer.</p>
+              <p class="mb-4">¡Hola! Soy Marcos Lautaro Molina. Estudio programacion y trabajo en el area de atencion al cliente. Me gusta jugar al futbol y ir al gym</p>
               <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
@@ -197,7 +197,7 @@
             <img src="../img/Facundo-Leiva.jpg" alt="Facundo Leiva">
             <div class="overplay text-center">
               <h5>Facundo Leiva</h5>
-              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias provident delectus quasi. Repellendus, laboriosam, reiciendis illum accusantium ex, rem laudantium corporis magni totam impedit libero dolor voluptatem commodi et porro quaerat at mollitia praesentium consequatur iusto! Dignissimos quaerat quos doloribus maxime ducimus sunt qui vitae sint consequatur. Ad, quisquam corrupti?</p>
+              <p class="mb-4"></p>
               <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
@@ -214,8 +214,7 @@
             <img src="../img/Lucas-Basualdo.jpg" alt="Laucas Basualdo">
             <div class="overplay text-center">
               <h5>Lucas Basualdo</h5>
-              <p class="mb-4">This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit longer.</p>
+              <p class="mb-4">Hola, soy Lucas Basualdo tengo 29 años, soy Profesor en Informática. Me gusta tocar la guitarra, andar en bici, el anime y los videojuegos.</p>
               <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
