hice cmabios en los textos de las card

--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -143,7 +143,7 @@
             <img src="../img/yop.jpg" alt="Marcos Lautaro Molina">
             <div class="overplay text-center">
               <h5>Marcos Lautaro Molina</h5>
-              <p class="mb-4">¡Hola! Soy Marcos Lautaro Molina. Estudio programacion y trabajo en el area de atencion al cliente. Me gusta jugar al futbol y ir al gym</p>
+              <p class="mb-4">¡Hola! Soy Marcos Lautaro Molina, tengo 19 años. Estudio programacion y trabajo en el area de atencion al cliente. Me gusta jugar al futbol y ir al gym</p>
               <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
@@ -197,7 +197,7 @@
             <img src="../img/Facundo-Leiva.jpg" alt="Facundo Leiva">
             <div class="overplay text-center">
               <h5>Facundo Leiva</h5>
-              <p class="mb-4"></p>
+              <p class="mb-4">!Hola¡ mi nombre es Facundo Nahuel Leiva, tengo 27 años. Soy técnico en reparaciones e instalaciones mecánicas.</p>
               <p class="text-bg-light rounded-3 w-75 fw-bolder py-2 m-0">
                 Siguenos en nuestras redes
               </p>
