--- a/pages/categoria1.html
+++ b/pages/categoria1.html
@@ -207,7 +207,7 @@
         <div class="d-flex justify-content-between my-3">
           <div>
             <button class="border rounded-2 text-secondary">
-              Productos / Calzado
+              Productos / Remeras
             </button>
           </div>
           <div>
