todas las paginas detalle producto terminandas

--- a/pages/categoria1.html
+++ b/pages/categoria1.html
@@ -234,7 +234,7 @@
       <section class="container my-4">
         <div class="row gap-4 justify-content-center">
           <div class="card text-center" style="width: 18rem">
-            <a href="../pages/detalleproducto1.html" target="_blank">
+            <a href="/pages/detalleproducto3.html" target="_blank">
               <div class="contenedor-img w-100"></div
             ></a>
             <div class="card-body">
@@ -259,7 +259,7 @@
             </div>
           </div>
           <div class="card text-center" style="width: 18rem">
-            <a href="../pages/detalleproducto1.html" target="_blank">
+            <a href="/pages/detalleproducto4.html" target="_blank">
               <div class="contenedor-img1 w-100"></div
             ></a>
             <div class="card-body">
@@ -282,7 +282,7 @@
             </div>
           </div>
           <div class="card text-center" style="width: 18rem">
-            <a href="../pages/detalleproducto1.html" target="_blank">
+            <a href="" target="_blank">
               <div class="contenedor-img2 w-100"></div
             ></a>
             <div class="card-body">
@@ -305,7 +305,7 @@
             </div>
           </div>
           <div class="card text-center" style="width: 18rem">
-            <a href="../pages/detalleproducto1.html" target="_blank">
+            <a href="" target="_blank">
               <div class="contenedor-img3 w-100"></div
             ></a>
             <div class="card-body">
@@ -330,7 +330,7 @@
             </div>
           </div>
           <div class="card text-center" style="width: 18rem">
-            <a href="../pages/detalleproducto1.html" target="_blank">
+            <a href="" target="_blank">
               <div class="contenedor-img4 w-100"></div
             ></a>
             <div class="card-body">
@@ -355,7 +355,7 @@
             </div>
           </div>
           <div class="card text-center" style="width: 18rem">
-            <a href="../pages/detalleproducto1.html" target="_blank">
+            <a href="" target="_blank">
               <div class="contenedor-img5 w-100"></div
             ></a>
             <div class="card-body">
@@ -378,7 +378,7 @@
             </div>
           </div>
           <div class="card text-center" style="width: 18rem">
-            <a href="../pages/detalleproducto1.html" target="_blank">
+            <a href="" target="_blank">
               <div class="contenedor-img6 w-100"></div
             ></a>
             <div class="card-body">
@@ -403,7 +403,7 @@
             </div>
           </div>
           <div class="card text-center" style="width: 18rem">
-            <a href="../pages/detalleproducto1.html" target="_blank">
+            <a href="" target="_blank">
               <div class="contenedor-img7 w-100"></div
             ></a>
             <div class="card-body">
