--- a/pages/detalleproducto1.html
+++ b/pages/detalleproducto1.html
@@ -271,7 +271,7 @@
           <!-- Producto 1 -->
           <div class="col-md-4">
             <div class="card product-card">
-              <img src="../img/imgCategoriaCalzado/Sambae_blanco/Zapatillas_Sambae_Blanco_JS3954_01_00_standard.avif" class="card-img-top" alt="Producto 1">
+              <a href="/pages/detalleproducto2.html"><img src="../img/imgCategoriaCalzado/Sambae_blanco/Zapatillas_Sambae_Blanco_JS3954_01_00_standard.avif" class="card-img-top" alt="Producto 1"></a>
               <div class="card-body">
                 <p class="card-text">Zapatillas Sambae</p>
                 <p class="old-price">$276.923</p>
