--- a/pages/detalleproducto2.html
+++ b/pages/detalleproducto2.html
@@ -271,7 +271,7 @@
           <!-- Producto 1 -->
           <div class="col-md-4">
             <div class="card product-card">
-              <img src="../img/imgCategoriaCalzado/Zapatillas Forum 84 Low ADV/Zapatillas_Forum_84_Low_ADV_Blanco_JP6094_01_00_standard.avif" class="card-img-top" alt="Producto 1">
+              <a href="/pages/detalleproducto1.html"><img src="../img/imgCategoriaCalzado/Zapatillas Forum 84 Low ADV/Zapatillas_Forum_84_Low_ADV_Blanco_JP6094_01_00_standard.avif" class="card-img-top" alt="Producto 1"></a>
               <div class="card-body">
                 <p class="card-text">Zapatillas Forum 84 Low ADV</p>
                 <p class="old-price">$246.923</p>
