--- a/pages/detalleproducto3.html
+++ b/pages/detalleproducto3.html
@@ -209,17 +209,13 @@
     <div class="col-md-7">
       <div class="d-flex">
         <div class="me-2 d-flex flex-column thumbs">
-          <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?q=80&w=200" 
+          <img src="/img/remera-detalle-producto-3.jpg" 
                onmouseover="changeImage(this)" class="active">
-          <img src="https://images.unsplash.com/photo-1510557880182-3d4d3cba35b5?q=80&w=200" 
-               onmouseover="changeImage(this)">
-          <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?q=80&w=200" 
-               onmouseover="changeImage(this)">
-          <img src="https://images.unsplash.com/photo-1512499617640-c2f999098c11?q=80&w=200" 
+          <img src="/img/remera-atras-detalle-producto-3.jpg" 
                onmouseover="changeImage(this)">
         </div>
         <div class="flex-grow-1">
-          <img id="mainImage" src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?q=80&w=800" class="main-img">
+          <img id="mainImage" src="/img/remera-detalle-producto-3.jpg" class="main-img">
         </div>
       </div>
     </div>
@@ -227,12 +223,12 @@
     <!-- Detalles -->
     <div class="col-md-5">
       <h5 class="text-muted">Nuevo | +1000 vendidos</h5>
-      <h3 class="fw-bold">Silla Gamer Alpina Ergonómica Giratoria Reclinable ft-088</h3>
+      <h3 class="fw-bold">Remera Independent Clipper</h3>
       <div class="mb-2">
         ⭐⭐⭐⭐☆ <span class="text-muted">(1141)</span>
       </div>
-      <h2 class="fw-bold">$250.000</h2>
-      <p class="text-muted">12 cuotas de $37.012,50</p>
+      <h2 class="fw-bold">$50.000</h2>
+      <p class="text-muted">12 cuotas de $6.700</p>
       <p class="text-success fw-bold">Llega gratis el viernes</p>
       
       <div class="mb-3">
@@ -273,12 +269,11 @@
           <!-- Producto 1 -->
           <div class="col-md-4">
             <div class="card product-card">
-              <img src="https://images.unsplash.com/photo-1598300183595-abc3d5c25d5e?q=80&w=600" class="card-img-top" alt="Producto 1">
+              <a href="/pages/detalleproducto4.html"><img src="../img/Remeras/RemeraRipCurlRC/item38564foto155185th.jpg" class="card-img-top" alt="Producto 1"></a>
               <div class="card-body">
-                <p class="card-text">Sillón Pro Gamer Energy - Desillas Color Verde</p>
-                <p class="old-price">$227.380</p>
-                <h5 class="fw-bold">$125.059 <span class="discount">45% OFF</span></h5>
-                <p class="text-muted">12 cuotas de $18.514</p>
+                <p class="card-text">Remera Rip Curl RC</p>
+                <h5 class="fw-bold">$49.999</h5>
+                <p class="text-muted">6 cuotas de $8.514</p>
                 <p class="free-shipping">Envío gratis</p>
               </div>
             </div>
@@ -287,12 +282,12 @@
           <!-- Producto 2 -->
           <div class="col-md-4">
             <div class="card product-card">
-              <img src="https://images.unsplash.com/photo-1621939514649-d1c8e5d5e88a?q=80&w=600" class="card-img-top" alt="Producto 2">
+              <img src="../img/Remeras/RemeraRipCurlsEveryday/item38566foto155181th.jpg" class="card-img-top" alt="Producto 2">
               <div class="card-body">
-                <p class="card-text">Silla Gamer Gc-030 Cuero Ecol Patagonia Home</p>
-                <p class="old-price">$299.999</p>
-                <h5 class="fw-bold">$179.999 <span class="discount">40% OFF</span></h5>
-                <p class="text-muted">Mismo precio en 3 cuotas de $59.999</p>
+                <p class="card-text">Rip Curl Everyday</p>
+                <p class="old-price">$80.000</p>
+                <h5 class="fw-bold">$60.000 <span class="discount">40% OFF</span></h5>
+                <p class="text-muted">Mismo precio en 3 cuotas de $19.999</p>
                 <p class="free-shipping">Envío gratis ⚡ FULL</p>
               </div>
             </div>
@@ -301,11 +296,11 @@
           <!-- Producto 3 -->
           <div class="col-md-4">
             <div class="card product-card">
-              <img src="https://images.unsplash.com/photo-1598300206271-1c5d52bb6baf?q=80&w=600" class="card-img-top" alt="Producto 3">
+              <img src="../img/Remeras/RemeraSantaCruzOtherDot/item37503foto151620th.jpg" class="card-img-top" alt="Producto 3">
               <div class="card-body">
-                <p class="card-text">Silla Gamer Pc Dyvan 73210 Ergonomica Reclinable</p>
-                <h5 class="fw-bold">$200.000</h5>
-                <p class="text-muted">12 cuotas de $29.610</p>
+                <p class="card-text">Remera Santa Cruz Other Dot</p>
+                <h5 class="fw-bold">$60.000</h5>
+                <p class="text-muted">2 cuotas de $29.610</p>
                 <p class="free-shipping">Envío gratis</p>
               </div>
             </div>
@@ -320,12 +315,12 @@
           
           <div class="col-md-4">
             <div class="card product-card">
-              <img src="https://images.unsplash.com/photo-1616627786315-f6b2f0be2493?q=80&w=600" class="card-img-top" alt="Producto 4">
+              <img src="../img/Remeras/RemeraSantaCruzRoskoppEyeInvert/item37277foto150727th.jpg" class="card-img-top" alt="Producto 4">
               <div class="card-body">
-                <p class="card-text">Silla ergonómica Mesh con apoyabrazos</p>
-                <p class="old-price">$150.000</p>
-                <h5 class="fw-bold">$99.999 <span class="discount">35% OFF</span></h5>
-                <p class="text-muted">6 cuotas de $16.666</p>
+                <p class="card-text">Remera Santa Cruz Rosk Kopp</p>
+                <p class="old-price">$70.000</p>
+                <h5 class="fw-bold">$49.999 <span class="discount">15% OFF</span></h5>
+                <p class="text-muted">6 cuotas de $9.999</p>
                 <p class="free-shipping">Envío gratis</p>
               </div>
             </div>
@@ -333,10 +328,10 @@
 
           <div class="col-md-4">
             <div class="card product-card">
-              <img src="https://images.unsplash.com/photo-1616627900204-823a58f38eae?q=80&w=600" class="card-img-top" alt="Producto 5">
+              <img src="../img/Remeras/RemeraVansClassic/item37860foto152928th.jpg" class="card-img-top" alt="Producto 5">
               <div class="card-body">
-                <p class="card-text">Silla Ejecutiva Premium con soporte lumbar</p>
-                <h5 class="fw-bold">$220.000</h5>
+                <p class="card-text">Remera Vans Classic</p>
+                <h5 class="fw-bold">$60.000</h5>
                 <p class="text-muted">12 cuotas de $18.333</p>
                 <p class="free-shipping">Envío gratis</p>
               </div>
@@ -345,10 +340,10 @@
 
           <div class="col-md-4">
             <div class="card product-card">
-              <img src="https://images.unsplash.com/photo-1589820296156-2454f74f4d43?q=80&w=600" class="card-img-top" alt="Producto 6">
+              <img src="../img/Remeras/RemeraVisionOverCkassic/item37512foto151666th.jpg" class="card-img-top" alt="Producto 6">
               <div class="card-body">
-                <p class="card-text">Silla Gamer Pro Racing con cojines ergonómicos</p>
-                <h5 class="fw-bold">$180.000</h5>
+                <p class="card-text">Remera Vision Over Classic</p>
+                <h5 class="fw-bold">$60.000</h5>
                 <p class="text-muted">12 cuotas de $15.000</p>
                 <p class="free-shipping">Envío gratis</p>
               </div>
@@ -378,14 +373,12 @@
 
   <h6 class="mt-3">CARACTERÍSTICAS:</h6>
   <ul class="lista-descripcion">
-    <li>Peso máximo soportado: 150 Kg.</li>
-    <li>Ideal para usar con computadora o consolas de videojuegos.</li>
-    <li>Respaldo ergonómico de gran altura.</li>
-    <li>Regulación de altura pistón hidráulico clase III con ajuste de 10 cm con resorte a prueba de explosiones.</li>
-    <li class="extra">Bloqueo de balanceo.</li>
-    <li class="extra">Regulación de dureza de balanceo.</li>
-    <li class="extra">Rotación de 360°.</li>
-    <li class="extra">Reclinación de 90° a 180°.</li>
+    <li>16/1 100% algodón</li>
+    <li>Boxy fit</li>
+    <li>Flock en el frente</li>
+    <li class="extra">Estampa en espalda</li>
+    <li class="extra">Etiquetas marcarias</li>
+
   </ul>
 
   <a href="#" id="toggleDescripcion" class="text-primary fw-bold">Ver descripción completa ⌄</a>
@@ -400,21 +393,21 @@
     <div class="border-bottom pb-3 mb-3">
       <strong>Juan Pérez</strong> 
       <span class="text-warning">★★★★★</span>
-      <p class="mb-1">Muy buena calidad, el armado fue sencillo y es muy cómoda. Vale totalmente la pena.</p>
+      <p class="mb-1">Muy buena calidad, es muy cómoda. Vale totalmente la pena.</p>
       <small class="text-muted">Hace 2 semanas</small>
     </div>
 
     <div class="border-bottom pb-3 mb-3">
       <strong>María Gómez</strong> 
       <span class="text-warning">★★★★☆</span>
-      <p class="mb-1">Me gustó mucho, aunque el envío tardó un poco más de lo esperado. La silla es firme y elegante.</p>
+      <p class="mb-1">Me gustó mucho, aunque el envío tardó un poco más de lo esperado.</p>
       <small class="text-muted">Hace 1 mes</small>
     </div>
 
     <div class="border-bottom pb-3 mb-3">
       <strong>Carlos López</strong> 
       <span class="text-warning">★★★☆☆</span>
-      <p class="mb-1">La silla cumple, pero el acolchado podría ser más grueso. Aún así está bien por el precio.</p>
+      <p class="mb-1">El diseño es bueno, aunque no es tan buena la cálidad. Aún así está bien por el precio.</p>
       <small class="text-muted">Hace 3 meses</small>
     </div>
   </div>
