Agregue carrito con precios y links actualizados

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -271,6 +271,109 @@
                 </div>
             </div>
         </div>
+        <section class="container my-5">
+  <h1 class="h3 mb-4">Carrito de compras</h1>
+
+  <div class="row g-4">
+    <div class="col-12 col-lg-8">
+      <div class="table-responsive">
+        <table class="table align-middle">
+          <thead class="table-light">
+            <tr>
+              <th scope="col">Producto</th>
+              <th scope="col" class="text-end">Precio</th>
+              <th scope="col" class="text-center">Cant.</th>
+              <th scope="col" class="text-end">Subtotal</th>
+              <th scope="col" class="text-center">Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <div class="d-flex align-items-center gap-3">
+                  <a href="./detalleproducto1.html"><img src="../img/imgCategoriaCalzado/Zapatillas Forum 84 Low ADV/Zapatillas_Forum_84_Low_ADV_Blanco_JP6094_01_00_standard.avif" alt="Zapatillas Forum 84 Low ADV" class="carrito-img" a></a>
+                  
+                  <div>
+                    <div class="fw-semibold">Zapatillas Forum 84 Low ADV</div>
+                    <small class="text-muted">Talle 42 · Blancas</small>
+                  </div>
+                </div>
+              </td>
+              <td class="text-end">AR$ 149.999</td>
+              <td class="text-center">1</td>
+              <td class="text-end">AR$ 149.999</td>
+              <td class="text-center">
+                <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="d-flex align-items-center gap-3">
+                  <a href="./detalleproducto3.html"><img src="../img/Remeras/RemeraIndependentClipper/item38487foto154874th.jpg" alt="Remera Independent Clipper" class="carrito-img"></a>
+                  <div>
+                    <div class="fw-semibold">Remera Independent Clipper</div>
+                    <small class="text-muted">Talle M · Blanca</small>
+                  </div>
+                </div>
+              </td>
+              <td class="text-end">AR$ 49.999</td>
+              <td class="text-center">2</td>
+              <td class="text-end">AR$ 99.998</td>
+              <td class="text-center">
+                <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="d-flex align-items-center gap-3">
+                  <a href="./detalleproducto2.html"><img src="../img/imgCategoriaCalzado/Sambae_blanco/Zapatillas_Sambae_Blanco_JS3954_01_00_standard.avif" alt="Zapatillas Sambae" class="carrito-img"></a>
+                  <div>
+                    <div class="fw-semibold">Zapatillas Sambae</div>
+                    <small class="text-muted">Talle 42 · Blanca</small>
+                  </div>
+                </div>
+              </td>
+              <td class="text-end">AR$ 179.999</td>
+              <td class="text-center">1</td>
+              <td class="text-end">AR$ 179.999</td>
+              <td class="text-center">
+                <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <aside class="col-12 col-lg-4">
+      <div class="card border-0 shadow-sm">
+        <div class="card-body">
+          <h2 class="h5 mb-4">Resumen</h2>
+          <div class="d-flex justify-content-between mb-2">
+            <span>Subtotal</span>
+            <strong>AR$ 429.996</strong>
+          </div>
+          <div class="d-flex justify-content-between mb-3">
+            <span>Envío</span>
+            <span class="text-muted">Gratis</span>
+          </div>
+          <hr>
+          <div class="d-flex justify-content-between mb-4">
+            <span class="h6 mb-0">Total</span>
+            <span class="h5 mb-0">AR$ 429.996</span>
+          </div>
+
+          <div class="d-grid gap-2">
+            <a href="./error404.html" class="btn btn-success">Proceder con la compra</a>
+            <a href="../index.html" class="btn btn-outline-secondary">Seguir comprando</a>
+          </div>
+        </div>
+      </div>
+    </aside>
+  </div>
+</section>
     </main>
     <footer class="bg-dark">
       <section class="container">
